[package]
name = "npm-scripts"
version = "0.1.0"
authors = ["simonxabris <abris96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.60"

[dependencies.serde]
version = "1.0.117"
features = ["derive"]